--- a/package.json
+++ b/package.json
@@ -1,26 +1,32 @@
 {
-  "name": "jb-assignment",
-  "version": "0.0.1",
-  "main": "index.js",
-  "repository": "git@github.com:eignatyev/jb-assignment.git",
-  "author": "Egor Ignatyev <egoriggy@gmail.com>",
-  "license": "MIT",
-  "devDependencies": {
-    "@testing-library/react": "^13.4.0",
-    "@types/node": "^18.11.9",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard-with-typescript": "^23.0.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-n": "^15.0.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.31.11",
-    "prettier": "^2.8.0",
-    "typescript": "*"
-  },
-  "dependencies": {
-    "@rescui/select": "^0.3.2",
-    "@rescui/ui-contexts": "^0.3.5"
-  }
+    "name": "jb-assignment",
+    "version": "0.0.1",
+    "main": "index.js",
+    "repository": "git@github.com:eignatyev/jb-assignment.git",
+    "author": "Egor Ignatyev <egoriggy@gmail.com>",
+    "license": "MIT",
+    "scripts": {
+        "test": "jest"
+    },
+    "devDependencies": {
+        "@babel/preset-env": "^7.20.2",
+        "@babel/preset-typescript": "^7.18.6",
+        "@testing-library/react": "^13.4.0",
+        "@types/node": "^18.11.9",
+        "@typescript-eslint/eslint-plugin": "^5.0.0",
+        "eslint": "^8.0.1",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-config-standard-with-typescript": "^23.0.0",
+        "eslint-plugin-import": "^2.25.2",
+        "eslint-plugin-n": "^15.0.0",
+        "eslint-plugin-promise": "^6.0.0",
+        "eslint-plugin-react": "^7.31.11",
+        "jest": "^29.3.1",
+        "prettier": "^2.8.0",
+        "typescript": "*"
+    },
+    "dependencies": {
+        "@rescui/select": "^0.3.2",
+        "@rescui/ui-contexts": "^0.3.5"
+    }
 }
