--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "author": "Egor Ignatyev <egoriggy@gmail.com>",
     "license": "MIT",
     "scripts": {
+        "lint": "yarn prettier && eslint ./**/*.{ts,tsx}",
+        "prettier": "prettier ./**/*.{ts,tsx} --list-different",
         "test": "jest"
     },
     "devDependencies": {
-        "@babel/preset-env": "^7.20.2",
-        "@babel/preset-typescript": "^7.18.6",
+        "@jest/globals": "^29.3.1",
+        "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
+        "@types/jest": "^29.2.3",
         "@types/node": "^18.11.9",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
         "eslint": "^8.0.1",
@@ -21,9 +24,15 @@
         "eslint-plugin-n": "^15.0.0",
         "eslint-plugin-promise": "^6.0.0",
         "eslint-plugin-react": "^7.31.11",
+        "identity-obj-proxy": "^3.0.0",
         "jest": "^29.3.1",
+        "jest-environment-jsdom": "^29.3.1",
+        "jest-expect-message": "^1.1.3",
         "prettier": "^2.8.0",
-        "typescript": "*"
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "ts-jest": "^29.0.3",
+        "typescript": "4.9.3"
     },
     "dependencies": {
         "@rescui/select": "^0.3.2",
